# kirovs-assistant

./: .env  .gitignore  main.py  pyproject.toml
src/: app.py  commands.py  config.py  constants.py  replies.py
src/business_logic/: dependencies.py  services.py
src/data_access/: repositories.py  shemas.py
src/data_access/external_api/: config.py
src/database/ldap/: config.py
src/database/sqlalchemy/: config.py  models.py  setup.py
src/database/sqlalchemy/sql/: config.py
src/presentation/bot/: config.py  enums.py  fsms.py  keyboards.py  main.py  middlewares.py  replies.py
src/presentation/bot/commands/: login.py  logout.py  start.py  utils.py
