[project]
name = "kirovs-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "aiohttp>=3.12.14",
    "aiosqlite>=0.21.0",
    "ldap3>=2.9.1",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.42",
]
